// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RefusedUsersList does not render refresh share button 1`] = `
<div>
  <h2>
    Refused
  </h2>
  <div
    class="list-group"
  >
    
    <div
      data-test-id="refused-user-id2"
    >
      <div
        class="list-group-item"
      >
        bar@example.com
      </div>
    </div>
  </div>
</div>
`;

exports[`RefusedUsersList renders refresh share button 1`] = `
<div>
  <h2>
    Refused
  </h2>
  <div
    class="list-group"
  >
    
    <div
      class="list-group-item"
      data-test-id="refused-user-id2"
      style="display: block;"
    >
      <div
        class="row"
      >
        <div
          class="pt-1 col-md-6"
        >
          bar@example.com
        </div>
        <div
          class="pt-1 col-md-4"
        />
        <div
          class="col-md-2"
        >
          <div
            class="float-end btn-group"
            role="group"
          >
            <button
              class="p-0 me-3 btn btn-link"
              data-test-id="refresh-share"
              type="button"
            >
              <i
                class="fa fa-redo fa-2x text-primary"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
